# parserTgYtX

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_youtube_source_modes.py  0003_content_media_type.py  0004_content_extra_materials.py  0005_remove_extra_materials.py  0006_content_ad_classification.py  0007_content_category.py  0008_deferred_items.py  0009_substack_seen.py
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/bot/: handlers.py  keyboards.py
app/services/: content.py  deferred.py  downloader.py  openai_filter.py  substack.py  substack_poller.py  watermark.py  youtube.py  youtube_poller.py
app/sources/: __init__.py  base.py  twitter.py
tests/: conftest.py  test_core.py  test_downloader.py  test_inbox.py  test_pipeline.py  test_substack.py  test_watermark.py  test_web.py  test_youtube.py
