[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parser-tg-yt-x"
version = "0.1.0"
description = "Telegram and YouTube crypto content curator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20,<4",
  "alembic>=1.15,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "greenlet>=3.1,<4",
  "httpx>=0.28,<1",
  "openai>=1.75,<3",
  "pillow>=11.2,<13",
  "pydantic-settings>=2.8,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0.40,<3",
  "uvicorn[standard]>=0.34,<1",
  "yt-dlp[default]>=2026.5.22",
  "bgutil-ytdlp-pot-provider==1.3.1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.26,<1",
  "respx>=0.22,<1",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
exclude = ["alembic"]
